<resources>
    <string name="app_name">CRUDApplication</string>
    <string name="go_back">Go back</string>
    <string name="search">Search</string>
    <string name="all_users">All Users</string>
    <string name="input_user">Input User</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_user">Save User</string>
    <string name="update_user">Update User</string>
    <string name="select_image">Select Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add User</string>
    <string name="phone_Number">" phone number"</string>
    <string name="add">+</string>
    <string name="b"><![CDATA[<-]]></string>
    <string name="back"><![CDATA[<]]></string>
    <string name="todo">TODO</string>
</resources>