<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddUserFragment">


    <TextView
        android:id="@+id/addUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:text="@string/add_user"
        android:textColor="@color/myColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60sp"
        android:drawableStart="@drawable/baseline_border_color_24"
        android:drawablePadding="10dp"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/userSurname"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120sp"
        android:drawableStart="@drawable/baseline_border_color_24"
        android:drawablePadding="10dp"
        android:hint="@string/surname"
        android:inputType="text"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="180sp"
        android:drawableStart="@drawable/baseline_border_color_24"
        android:drawablePadding="10dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/userPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="240sp"
        android:drawableStart="@drawable/baseline_border_color_24"
        android:drawablePadding="10dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textSize="20sp"
        android:maxLength="10"
        tools:ignore="Autofill" />


    <ImageButton
        android:id="@+id/btnSelectImage"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:layout_marginTop="300sp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_account_circle_24"
        android:text="@string/select_image"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300sp"
        android:contentDescription="@string/todo"
        android:padding="2sp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/circle"
        app:strokeColor="@color/myColor"
        app:strokeWidth="2sp" />

    <Button
        android:id="@+id/saveUser"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="460sp"
        android:backgroundTint="@color/myColor"
        android:text="@string/save_user"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="5sp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_arrow_back_24"
        android:textColor="@color/myColor" />

</FrameLayout>