<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UpdateUserFragment">


    <TextView
        android:id="@+id/addUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:text="@string/update_user"
        android:textColor="@color/myColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/updateUserName"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:textSize="20sp"
        android:drawableStart="@drawable/baseline_border_color_24"
        android:drawablePadding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60sp"
        android:hint="@string/name"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/updateUserSurname"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:textSize="20sp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/baseline_border_color_24"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120sp"
        android:hint="@string/surname"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/updateUserEmail"
        android:layout_width="match_parent"
        android:drawableStart="@drawable/baseline_border_color_24"
        android:layout_gravity="center_horizontal"
        android:layout_height="50sp"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="180sp"
        android:hint="@string/Email"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/updateUserPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:textSize="20sp"
        android:inputType="phone"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/baseline_border_color_24"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="240sp"
        android:hint="@string/phone_number"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/updateUser"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/myColor"
        android:text="@string/update_user"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="300sp"
        android:layout_gravity="center_horizontal"/>

</FrameLayout>