<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FirstPageFragment">

    <TextView
        android:id="@+id/addUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:text="@string/all_users"
        android:textColor="@color/myColor"
        android:textSize="20sp" />


    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:autofillHints="name"
        android:drawablePadding="10dp"
        android:drawableTint="#0055FF"
        android:gravity="center_vertical"
        android:hint="@string/search"
        android:inputType="text"
        android:paddingStart="5dp"
        app:searchIcon="@drawable/baseline_search_24"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="450sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addButton"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        app:cornerRadius="10000dp"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/myColor"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="30sp" />

</FrameLayout>